# wedge

./: .editorconfig  Cargo.toml  convert.py  future-mechanics.txt  index.html  index.ts  package-lock.json  package.json  readme.md  tsconfig.json
core/: Cargo.toml
core/levels/: tutorial2.json
core/shaders/: cell.vert
core/src/: color.rs  enums.rs  game.rs  lib.rs  main.rs  platform.rs
core/src/level/: mod.rs  player.rs
core/src/screens/: menu.rs  play.rs
core/src/ui/: entry.rs
desktop/: Cargo.toml
desktop/src/: main.rs  platform.rs
levels/: tutorial.json
lib/: game.ts
lib/algo/: push.ts
lib/entity/: board.ts  fragment.ts  stage.ts
old-levels/: tutorial.json
shaders/: cell.frag  cell.vert  segment.frag  segment.vert
src/: animations.rs  data.rs  enums.rs  game.rs  keymap.rs  level.rs  lib.rs  main.rs  renderer.rs  resources.rs
src/level/: block.rs  cell_map.rs  macros.rs  mod.rs
src/platform/: desktop.rs  mod.rs
src/screens/: editor.rs  menu.rs  mod.rs  play.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  platform.rs
