[package]
name = "wedge"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'

[dependencies]
glium = "0.25"
image = "0.21"
json5 = "0.2"
nalgebra = "0.18"
nalgebra-glm = "0.4"
serde = "1.0"
serde_derive = "1.0"
